// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applies rounding. 1`] = `
.c0 {
  round: 2;
  round: 2;
  round: 2px;
  round: 2px;
}

<div
  className="c0"
  value={1.67}
/>
`;

exports[`Calculates absolute value of a number. Keeps units as they are. 1`] = `
.c0 {
  abs: 25cm;
  abs: 18.6%;
  abs: 25cm;
  abs: 18.6%;
}

<div
  className="c0"
  value="25cm"
/>
`;

exports[`Calculates arccosine (inverse of cosine) function. 1`] = `
.c0 {
  acos: 1.0471975511965979rad;
  acos: 0rad;
  acos: NaNrad;
}

<div
  className="c0"
/>
`;

exports[`Calculates arcsine (inverse of sine) function. 1`] = `
.c0 {
  asin: 0.5235987755982989rad;
  asin: 0rad;
  asin: NaNrad;
}

<div
  className="c0"
/>
`;

exports[`Calculates arctangent (inverse of tangent) function. 1`] = `
.c0 {
  atan: -1rad;
  atan: 0rad;
  atan: 1.525373rad;
}

<div
  className="c0"
/>
`;

exports[`Calculates cosine function. 1`] = `
.c0 {
  sin: 0.5403023058681398;
  deg: 0.9998476951563913;
  grad: 0.9998766324816606;
  turn: 0.30901699437494745;
}

<div
  className="c0"
  value={1}
/>
`;

exports[`Calculates sine function. 1`] = `
.c0 {
  sin: 0.8414709848078965;
  deg: 0.01745240643728351;
  grad: 0.015707317311820675;
  turn: 0.9510565162951535;
}

<div
  className="c0"
  value={1}
/>
`;

exports[`Calculates square root of a number. Keeps units as they are. 1`] = `
.c0 {
  sqrt: 5cm;
  sqrt: 5cm;
}

<div
  className="c0"
  value="25cm"
/>
`;

exports[`Calculates tangent function. 1`] = `
.c0 {
  tan: 1.5574077246549023;
  tan: 0.017455064928217585;
  tan: 0.015709255323664916;
}

<div
  className="c0"
  value={1}
/>
`;

exports[`Converts a floating point number into a percentage string. 1`] = `
.c0 {
  p: 50%;
  p: 50%;
  p: 50%;
}

<div
  className="c0"
  value={0.5}
/>
`;

exports[`Does some math. 1`] = `
.c0 {
  width: 200px;
  width1: 150px;
  width1: 50px;
  width1: 5000px;
  width1: 2px;
  width2: 150;
  width2: -50;
  width2: 5000;
  width2: 0.5;
}

<div
  className="c0"
/>
`;

exports[`PI 1`] = `
.c0 {
  pi: 3.14159265;
}

<div
  className="c0"
/>
`;

exports[`Returns the highest of one or more values. 1`] = `
.c0 {
  max: 10;
  max: 42%;
  max: 72cm;
}

<div
  className="c0"
/>
`;

exports[`Returns the lowest of one or more values. 1`] = `
.c0 {
  min: 5;
  min: 2px;
  min: 3px;
}

<div
  className="c0"
/>
`;

exports[`Returns the value of the first argument modulus second argument. 1`] = `
.c0 {
  mod: NaNcm;
  mod: 5cm;
  mod: -1%;
  mod: 2;
}

<div
  className="c0"
  x={27}
  y={5}
/>
`;

exports[`Returns the value of the first argument raised to the power of the second argument. 1`] = `
.c0 {
  pow: 1cm;
  pow: 0.0016;
  pow: 5;
  pow: NaN;
  pow: NaN%;
  pow: 625;
}

<div
  className="c0"
  x={25}
  y={2}
/>
`;

exports[`Rounds down to the next lowest integer. 1`] = `
.c0 {
  floor: 2;
  floor: 2;
  floor: 2em;
  floor: 2em;
}

<div
  className="c0"
  value={2.6}
/>
`;

exports[`Rounds up to the next highest integer. 1`] = `
.c0 {
  ceil: 3;
  ceil: 3;
  ceil: 3px;
  ceil: 3px;
}

<div
  className="c0"
  value={2.4}
/>
`;
